--- a/app/components/students/studentView.html
+++ b/app/components/students/studentView.html
@@ -6,52 +6,55 @@
 		<div class="col-md-1" ng-click="student_signOut()"><button class="btn btn-danger">Sign Out</button></div>
 	</div>
 	<br><br>
-	<div class="row">
-		<div class="col-md-1">
-			<label style="font-size: 1.3em">Search</label>
+	<div class="loading-gif" ng-hide="show_page"></div>
+	<div ng-show="show_page">
+		<div class="row">
+			<div class="col-md-1">
+				<label style="font-size: 1.3em">Search</label>
+			</div>
+			<div class="col-md-4">
+				<input type="text" name="" ng-model="search">
+			</div>
+			<!-- <div class="col-md-3">
+				<b>University: </b>
+				<input type="text" name="">
+			</div>
+			<div class="col-md-3">
+				<b>Program: </b>
+				<input type="text" name="">
+			</div> -->
 		</div>
-		<div class="col-md-4">
-			<input type="text" name="" ng-model="search">
-		</div>
-		<!-- <div class="col-md-3">
-			<b>University: </b>
-			<input type="text" name="">
-		</div>
-		<div class="col-md-3">
-			<b>Program: </b>
-			<input type="text" name="">
-		</div> -->
-	</div>
-	<br>
+		<br>
 
-	<div class="row">
-		<div class="col-md-12">
-			<table class="table">
-				<thead>
-					<th>Serial No</th>
-					<th>First Name</th>
-					<th>Last Name</th>
-					<th>University</th>
-					<th>Degree</th>
-					<th>Program</th>
-					<th>Joined</th>
-					<th>Graduate</th>
-					<th>Rating</th>
-				</thead>
-				<tr ng-repeat="(key, value) in students | filter: search" ng-click="goToId(value.firebaseId)">
-					<td>{{key + 1}}</td>
-					<td>{{value.firstname}}</td>
-					<td>{{value.lastname}}</td>
-					<td>{{value.university}}</td>
-					<td>{{value.degree}}</td>
-					<td>{{value.program}}</td>
-					<td>{{value.year_joined}}</td>
-					<td>{{value.year_graduated}}</td>
-					<!-- <td class="rate">{{"*".repeat(value.rating)}}</td> -->
-					<td class="rate">{{value.rating}}</td>
-					<!-- <div class="my-raing"></div> -->
-				</tr>
-			</table>
+		<div class="row">
+			<div class="col-md-12">
+				<table class="table table-hover">
+					<thead>
+						<th>Serial No</th>
+						<th>First Name</th>
+						<th>Last Name</th>
+						<th>University</th>
+						<th>Degree</th>
+						<th>Program</th>
+						<th>Joined</th>
+						<th>Graduate</th>
+						<th>Rating</th>
+					</thead>
+					<tr ng-repeat="(key, value) in students | filter: search" ng-click="goToId(value.firebaseId)">
+						<td>{{key + 1}}</td>
+						<td>{{value.firstname}}</td>
+						<td>{{value.lastname}}</td>
+						<td>{{value.university}}</td>
+						<td>{{value.degree}}</td>
+						<td>{{value.program}}</td>
+						<td>{{value.year_joined}}</td>
+						<td>{{value.year_graduated}}</td>
+						<!-- <td class="rate">{{"*".repeat(value.rating)}}</td> -->
+						<td class="rate">{{value.rating}}</td>
+						<!-- <div class="my-raing"></div> -->
+					</tr>
+				</table>
+			</div>
 		</div>
 	</div>
 	<!-- <footer>This is the footer</footer> -->
