--- a/app/components/info/infoView.html
+++ b/app/components/info/infoView.html
@@ -1,6 +1,6 @@
 <div class="container" id="info">
 	<div class="row" style="padding-top: 20px">
-		<div class="col-md-10"><h3>Welcome to Scholar Strategy Review</h3></div>
+		<div class="col-md-10"><h3>Scholar Strategy Review</h3></div>
 		<!-- <div class="col-md-1 pad" ng-click="change_show(true)" ng-hide="user.show"><button class="btn btn-primary">Show Profile</button></div>
 		<div class="col-md-1 pad" ng-click="change_show(false)" ng-show="user.show"><button class="btn btn-warning">Hide Profile</button></div> -->
 		<div class="col-md-1 pad" ng-click="back()"><button class="btn btn-info">Back</button></div>
@@ -8,7 +8,7 @@
 	</div>
 
 	<!-- <h3 class="align_center">Review</h3> -->
-	<br><br>
+	<hr><br>
 	<div class="loading-gif" ng-hide="show_page"></div>
 	<div ng-show="show_page">
 		<div class="row">
@@ -40,7 +40,7 @@
 		<br>
 		<div class="row">
 			<div class="col-md-3">
-				<label>Year Graduted</label>
+				<label>Year Graduated (Expected)</label>
 			</div>
 			<div class="col-md-2">
 				<input class="form-control" type="text" ng-model="student_data['year_graduated']" class="form-control" disabled>
@@ -73,7 +73,16 @@
 				<input class="form-control" type="text" ng-model="student_data['program']" class="form-control" disabled>
 			</div>
 		</div>
-		<br>
+		<br> 
+		<div class="row">
+        	<div class="col-md-3">
+            	<label>GPA</label>
+           	</div>
+           	<div class="col-md-1">
+            	<input class="form-control" type="text" ng-model="student_data['gpa']" disabled>
+          	</div>
+       	</div>
+       	<br>	
 		<div class="row">
 			<div class="col-md-3">
 				<label>Internship</label>
@@ -124,7 +133,7 @@
 				<label>What are the negative points about this program?</label>
 			</div>
 			<div class="col-md-9">
-				<textarea rows="10" class="form-control" ng-model="student_data['negative']"></textarea>
+				<textarea rows="10" class="form-control" ng-model="student_data['negative']" disabled></textarea>
 			</div>
 		</div>
 		<br>
