--- a/app/components/login/loginView.html
+++ b/app/components/login/loginView.html
@@ -3,7 +3,7 @@
 <div class="container">
 	<p class="message" ng-show="isMsg">** {{msg}} **</p>
 	<div class="row align_center">
-		<div class="col-md-10"><h3>Welcome to Scholar Strategy Review</h3></div>
+		<div class="col-md-10"><h3>Scholar Strategy Review</h3></div>
 	</div>
 	
 	<div class="row justify-content-around">
