--- a/app/components/profile/profileView.html
+++ b/app/components/profile/profileView.html
@@ -1,12 +1,12 @@
 <div class="container" id="profile">
 	<div class="row" style="padding-top: 20px">
-		<div class="col-md-10"><h3>Welcome to Scholar Strategy Review</h3></div>
+		<div class="col-md-10"><h3>Scholar Strategy Review</h3></div>
 		<div class="col-md-1 pad" ng-click="back()"><button class="btn btn-info">Back</button></div>
 		<div class="col-md-1 pad" ng-click="profile_signOut()"><button class="btn btn-danger">Sign Out</button></div>
 	</div>
 
 	<!-- <h3 class="align_center">Profile</h3> -->
-	<br><br>
+	<hr><br>
 	<div class="loading-gif" ng-hide="show_page"></div>
 	<div class="alert alert-success alert-dismissible" ng-show="show_confirm">
 		<!-- <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> -->
