--- a/app/components/review/reviewView.html
+++ b/app/components/review/reviewView.html
@@ -103,7 +103,7 @@
 				<label>Internship Company</label>
 			</div>
 			<div class="col-md-4">
-				<input class="form-control" type="text" ng-model="review['internship']">
+				<input class="form-control" type="text" ng-model="review['internship']" placeholder="Where did you intern?">
 			</div>
 		</div>
 		<br>
@@ -112,7 +112,7 @@
 				<label>Fulltime Company</label>
 			</div>
 			<div class="col-md-4">
-				<input class="form-control" type="text" ng-model="review['fulltime']">
+				<input class="form-control" type="text" ng-model="review['fulltime']" placeholder="Where did you join fulltime upon graduating?">
 			</div>
 		</div>
 		<br>
@@ -121,7 +121,7 @@
 				<label>Job Prospects</label>
 			</div>
 			<div class="col-md-9">
-				<textarea rows="10" class="form-control" ng-model="review['job_prospects']" placeholder="Review may include: How to apply? When to apply?"></textarea>
+				<textarea rows="10" class="form-control" ng-model="review['job_prospects']" placeholder="What is your experience with landing internships/jobs at this program? How much did the school help you in recruitment?"></textarea>
 			</div>
 		</div>
 		<br>
@@ -130,7 +130,7 @@
 				<label>Expenses</label>
 			</div>
 			<div class="col-md-9">
-				<textarea rows="10" class="form-control" ng-model="review['expenses']" placeholder="May include detailed list of expenses from start to end"></textarea>
+				<textarea rows="10" class="form-control" ng-model="review['expenses']" placeholder="How much did you spent on tution here, living and other while studying? What is you feedback on how expensive this program is?"></textarea>
 			</div>
 		</div>
 		<br>
@@ -139,7 +139,7 @@
 				<label>Curriculum/Teaching</label>
 			</div>
 			<div class="col-md-9">
-				<textarea rows="10" class="form-control" ng-model="review['curriculum']" placeholder="Which courses to take? Who are good mentors? Whom to be in touch with? Good/bad professors"></textarea>
+				<textarea rows="10" class="form-control" ng-model="review['curriculum']" placeholder="Which courses by which professors do you recommend taking? Please mention your most liked and disliked courses."></textarea>
 			</div>
 		</div>
 		<br>
