--- a/app/components/profile/profileView.html
+++ b/app/components/profile/profileView.html
@@ -1,7 +1,7 @@
 <div class="container" id="profile">
 	<div class="row" style="padding-top: 20px">
-		<div class="col-md-10"><h3>Scholar Strategy Review</h3></div>
-		<div class="col-md-1 pad" ng-click="back()"><button class="btn btn-info">Back</button></div>
+		<div class="col-md-9"><h3>Scholar Strategy Review</h3></div>
+		<div class="col-md-2 pad" ng-click="back()"><button class="btn btn-info">School Reviews</button></div>
 		<div class="col-md-1 pad" ng-click="profile_signOut()"><button class="btn btn-danger">Sign Out</button></div>
 	</div>
 
