added footer, changed color for rating, show profile page for first time user

--- a/app/components/info/infoView.html
+++ b/app/components/info/infoView.html
@@ -1,6 +1,6 @@
 <div class="container" id="info">
 	<div class="row" style="padding-top: 20px">
-		<div class="col-md-10"><h3>Scholar Strategy Review</h3></div>
+		<div class="col-md-10"><h3>Scholar Strategy Reviews</h3></div>
 		<!-- <div class="col-md-1 pad" ng-click="change_show(true)" ng-hide="user.show"><button class="btn btn-primary">Show Profile</button></div>
 		<div class="col-md-1 pad" ng-click="change_show(false)" ng-show="user.show"><button class="btn btn-warning">Hide Profile</button></div> -->
 		<div class="col-md-1 pad" ng-click="back()"><button class="btn btn-info">Back</button></div>
@@ -87,7 +87,7 @@
 			<div class="col-md-3">
 				<label>Internship</label>
 			</div>
-			<div class="col-md-1">
+			<div class="col-md-4">
 				<input class="form-control" type="text" ng-model="student_data['internship']" class="form-control" disabled>
 			</div>
 		</div>
@@ -96,7 +96,7 @@
 			<div class="col-md-3">
 				<label>Fulltime</label>
 			</div>
-			<div class="col-md-1">
+			<div class="col-md-4">
 				<input class="form-control" type="text" ng-model="student_data['fulltime']" class="form-control" disabled>
 			</div>
 		</div>
@@ -161,9 +161,10 @@
 			</div>
 			<div class="col-md-9 my-rating-4"></div>
 		</div>
-		<br>
 		<hr>
+		<footer>Scholar Strategy Reviews (SSReviews) is a service offered by <a href="http://scholarstrategy.com">www.scholarstrategy.com</a> - leading counseling provider for 'MS/MBA in USA' applications.</footer>
 	</div>
+	<br>
 
 	<!-- <h3>Education</h3>
 	<div class="row" ng-repeat="item in general_list track by $index">
