--- a/app/components/login/loginView.html
+++ b/app/components/login/loginView.html
@@ -3,13 +3,15 @@
 <div class="container">
 	<p class="message" ng-show="isMsg">** {{msg}} **</p>
 	<div class="row align_center">
-		<div class="col-md-10"><h3>Welcome to Scholar Strategy Review</h3></div>
+		<div class="col-md-10"><h3>Welcome to Scholar Strategy Reviews</h3></div>
 	</div>
 	
 	<div class="row justify-content-around">
 		<div class="col-md-offset-4 col-md-2 pad" ng-click="loginFb()"><button class="btn btn-primary">Login with Faceook</button></div>
 		<div class="col-md-2" ng-click="login_signOut()"><button class="btn btn-danger">Sign Out</button></div>
 	</div>
+	<br><hr>
+	<footer>Scholar Strategy Reviews (SSReviews) is a service offered by <a href="http://scholarstrategy.com">www.scholarstrategy.com</a> - leading counseling provider for 'MS/MBA in USA' applications.</footer>
 	<!-- <div class="row">
 		<form>
 			<div class="row">
