--- a/app/components/profile/profileView.html
+++ b/app/components/profile/profileView.html
@@ -1,6 +1,6 @@
 <div class="container" id="profile">
 	<div class="row" style="padding-top: 20px">
-		<div class="col-md-9"><h3>Scholar Strategy Review</h3></div>
+		<div class="col-md-9"><h3>Scholar Strategy Reviews</h3></div>
 		<div class="col-md-2 pad" ng-click="back()"><button class="btn btn-info">School Reviews</button></div>
 		<div class="col-md-1 pad" ng-click="profile_signOut()"><button class="btn btn-danger">Sign Out</button></div>
 	</div>
@@ -55,8 +55,9 @@
 			<div class="col-md-offset-3 col-md-1">
 				<button class="btn btn-primary" ng-click="save()">Save</button>
 			</div>
-		</div>	
+		</div>
+		<hr>
+		<footer>Scholar Strategy Reviews (SSReviews) is a service offered by <a href="http://scholarstrategy.com">www.scholarstrategy.com</a> - leading counseling provider for 'MS/MBA in USA' applications.</footer>
 	</div>
 
-	<!-- <footer>This is the footer</footer> -->
 </div>
