--- a/app/components/review/reviewView.html
+++ b/app/components/review/reviewView.html
@@ -1,6 +1,6 @@
 <div class="container" id="reviewing">
 	<div class="row" style="padding-top: 20px">
-		<div class="col-md-10"><h3>Scholar Strategy Review</h3></div>
+		<div class="col-md-10"><h3>Scholar Strategy Reviews</h3></div>
 		<!-- <div class="col-md-1 pad" ng-click="change_show(true)" ng-hide="user.show"><button class="btn btn-primary">Show Profile</button></div>
 		<div class="col-md-1 pad" ng-click="change_show(false)" ng-show="user.show"><button class="btn btn-warning">Hide Profile</button></div> -->
 		<div class="col-md-1 pad" ng-click="back()"><button class="btn btn-info">Back</button></div>
@@ -186,7 +186,9 @@
 			</div>
 		</div>
 		<hr>
+		<footer>Scholar Strategy Reviews (SSReviews) is a service offered by <a href="http://scholarstrategy.com">www.scholarstrategy.com</a> - leading counseling provider for 'MS/MBA in USA' applications.</footer>
 	</div>
+	<br>
 
 	<!-- <h3>Education</h3>
 	<div class="row" ng-repeat="item in general_list track by $index">
