--- a/app/components/students/studentView.html
+++ b/app/components/students/studentView.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" id="all_students">
 	<div class="row" style="padding-top: 20px">
-		<div class="col-md-8"><h3>Scholar Strategy Review</h3></div>
+		<div class="col-md-8"><h3>Scholar Strategy Reviews</h3></div>
 		<div class="col-md-1"><button class="btn btn-info" ng-click="review()">Add/Edit Review</button></div>
 		<div class="col-md-offset-1 col-md-1"><button ng-click="edit()" class="btn btn-primary">My Profile</button></div>
 		<div class="col-md-1" ng-click="student_signOut()"><button class="btn btn-danger">Sign Out</button></div>
@@ -51,34 +51,36 @@
 			<div class="col-md-12">
 				<table class="table table-hover table-responsive table-bordered">
 					<thead>
-						<th class="col-md-1">First Name</th>
-						<th class="col-md-1">Last Name</th>
+						<!-- <th class="col-md-1">First Name</th>
+						<th class="col-md-1">Last Name</th> -->
 						<th class="col-md-2">University</th>
 						<th class="col-md-1">Degree</th>
 						<th class="col-md-2">Program</th>
 						<th class="col-md-1">GPA</th>
 						<th class="col-md-1">Graduated</th>
+						<th class="col-md-2">Internship</th>
 						<th class="col-md-2">Feedback</th>
 						<th class="col-md-1">Rating</th>
 					</thead>
 					<tr ng-repeat="(key, value) in students | filter: search | filter : {university : univ} | filter: {program : prog}" ng-click="goToId(value.firebaseId)">
-						<td>{{value.firstname}}</td>
-						<td>{{value.lastname}}</td>
+						<!-- <td>{{value.firstname}}</td>
+						<td>{{value.lastname}}</td> -->
 						<td>{{value.university}}</td>
 						<td>{{value.degree}}</td>
 						<td>{{value.program}}</td>
 						<td>{{value.gpa}}</td>
 						<td>{{value.year_graduated}}</td>
-						<!-- <td class="rate">{{"*".repeat(value.rating)}}</td> -->
+						<td>{{value.internship}}</td>
 						<td>{{value.overall.substring(0, 30)}}...</td>
-						<td class="rate">{{value.rating}}</td>
+						<td ng-class="value.rating >=7 ? 'rate-green' : 'rate-red'">{{value.rating}}</td>
 						<!-- <div class="my-raing"></div> -->
 					</tr>
 				</table>
 			</div>
 		</div>
+		<hr>
+		<footer>Scholar Strategy Reviews (SSReviews) is a service offered by <a href="http://scholarstrategy.com">www.scholarstrategy.com</a> - leading counseling provider for 'MS/MBA in USA' applications.</footer>
 	</div>
-	<!-- <footer>This is the footer</footer> -->
 	<!-- <script type="text/javascript">
 		function getStarStudents(){
 			var scope = angular.element($("#all_students")).scope();
