signout fixed at info page

--- a/app/components/info/infoView.html
+++ b/app/components/info/infoView.html
@@ -4,7 +4,7 @@
 		<!-- <div class="col-md-1 pad" ng-click="change_show(true)" ng-hide="user.show"><button class="btn btn-primary">Show Profile</button></div>
 		<div class="col-md-1 pad" ng-click="change_show(false)" ng-show="user.show"><button class="btn btn-warning">Hide Profile</button></div> -->
 		<div class="col-md-1 pad" ng-click="back()"><button class="btn btn-info">Back</button></div>
-		<div class="col-md-1 pad" ng-click="profile_signOut()"><button class="btn btn-danger">Sign Out</button></div>
+		<div class="col-md-1 pad" ng-click="info_signOut()"><button class="btn btn-danger">Sign Out</button></div>
 	</div>
 
 	<!-- <h3 class="align_center">Review</h3> -->
