--- a/app/components/info/infoView.html
+++ b/app/components/info/infoView.html
@@ -162,7 +162,7 @@
 			<div class="col-md-9 my-rating-4"></div>
 		</div>
 		<hr>
-		<footer>Scholar Strategy Reviews (SSReviews) is a service offered by <a href="http://scholarstrategy.com">www.scholarstrategy.com</a> - leading counseling provider for 'MS/MBA in USA' applications.</footer>
+		<footer style="text-align:center">Scholar Strategy Reviews (SSReviews) is a service offered by <a href="http://scholarstrategy.com">www.scholarstrategy.com</a> - leading counseling provider for 'MS/MBA in USA' applications.</footer>
 	</div>
 	<br>
 
