--- a/app/components/profile/profileView.html
+++ b/app/components/profile/profileView.html
@@ -57,7 +57,7 @@
 			</div>
 		</div>
 		<hr>
-		<footer>Scholar Strategy Reviews (SSReviews) is a service offered by <a href="http://scholarstrategy.com">www.scholarstrategy.com</a> - leading counseling provider for 'MS/MBA in USA' applications.</footer>
+		<footer style="text-align:center">Scholar Strategy Reviews (SSReviews) is a service offered by <a href="http://scholarstrategy.com">www.scholarstrategy.com</a> - leading counseling provider for 'MS/MBA in USA' applications.</footer>
 	</div>
 
 </div>
