--- a/app/components/students/studentView.html
+++ b/app/components/students/studentView.html
@@ -79,7 +79,7 @@
 			</div>
 		</div>
 		<hr>
-		<footer>Scholar Strategy Reviews (SSReviews) is a service offered by <a href="http://scholarstrategy.com">www.scholarstrategy.com</a> - leading counseling provider for 'MS/MBA in USA' applications.</footer>
+		<footer style="text-align:center">Scholar Strategy Reviews (SSReviews) is a service offered by <a href="http://scholarstrategy.com">www.scholarstrategy.com</a> - leading counseling provider for 'MS/MBA in USA' applications.</footer>
 	</div>
 	<!-- <script type="text/javascript">
 		function getStarStudents(){
