--- a/app/components/students/studentView.html
+++ b/app/components/students/studentView.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" id="all_students">
 	<div class="row" style="padding-top: 20px">
-		<div class="col-md-8"><h3>Scholar Strategy Reviews</h3></div>
+		<div class="col-md-8"><h3>Scholar Strategy School Reviews (beta)</h3></div>
 		<div class="col-md-1"><button class="btn btn-info" ng-click="review()">Add/Edit Review</button></div>
 		<div class="col-md-offset-1 col-md-1"><button ng-click="edit()" class="btn btn-primary">My Profile</button></div>
 		<div class="col-md-1" ng-click="student_signOut()"><button class="btn btn-danger">Sign Out</button></div>
