--- a/app/components/info/infoView.html
+++ b/app/components/info/infoView.html
@@ -1,6 +1,6 @@
 <div class="container" id="info">
 	<div class="row" style="padding-top: 20px">
-		<div class="col-md-10"><h3>Scholar Strategy Reviews</h3></div>
+		<div class="col-md-10"><h3>Scholar Strategy School Reviews (beta)</h3></div>
 		<!-- <div class="col-md-1 pad" ng-click="change_show(true)" ng-hide="user.show"><button class="btn btn-primary">Show Profile</button></div>
 		<div class="col-md-1 pad" ng-click="change_show(false)" ng-show="user.show"><button class="btn btn-warning">Hide Profile</button></div> -->
 		<div class="col-md-1 pad" ng-click="back()"><button class="btn btn-info">Back</button></div>
